<resources>
    <string name="app_name">Azkar</string>
    <string name="azSpah">Citation for morning</string>
    <string name="azMsa">Evening prayers</string>
    <string name="aznom">Citation for sleeping</string>
    <string name="azhouse">Citation for getting house</string>
    <string name="azfood">Citation for food</string>
    <string name="azmosq">Citation for getting the mosque</string>
    <string name="azfinishpray">Citation after you finish the pray</string>
    <string name="azgetoutMosq">Citation after getting out the mosque</string>
    <string name="azazan">Citation during the azan</string>
    <string name="moring">يقول مثل مايقول المؤذن إلا في "حي على الصلاة ، وحي على الفلاح " فيبدلها بـ "لاحول ولاقوة إلا بالله". " من قال حين يسمع المؤذن : "أشهد ( وفي رواية وأنا أشهد ) أن لا إله إلا الله ، وحده لا شريك له ، وأن محمد عبده ورسوله ، رضيت بالله رباً ، وبمحمداً رسولاً وبالأسلام ديناً" غُفر له ذنبه "(رواه مسلم 290/1) يقول ذلك تشهد المؤذن (ابن خزيمة 220/1) ملاحظة : عندما يقول المؤذن :" الصلاة خير من النوم ، تقول : الصلاة خير من النوم
بعد الأذآن
من قال حين يسمع النداء : "اللهم رب هذه الدعوة التامة والصلاة القائمة آت محمداً الوسيلة والفضيلة ، وأبعثه مقاماً محموداً الذي وعدته ، حلت له شفاعتي يوم القيامة "( رواه البخاري 252/1) ، ( الوسيلة : منزلة في الجنة لاينبغي إلا لعبد من عباد الله ) ، (الفضيلة : أي المرتبة الزائدة على الخلائق ) ، ( محموداً : المراد بالمقام المحمود الشفاعة )"يصلي على النبي بعد فراغه من إجابة المؤذن "( مسلم 288/1 )" الدعاء لايرد بين الآذان والإقامة "صحيح ( صحيح الترمذي 185/3 )</string>
    <string name="azan">وقت أذكار الصباح: يبدأ بعد طلوع الفجر، واختلفوا في نهايته على ثلاثة أقوال وينتهي بغروب الشمس وهذا قول ابن الجزري كما حكاه الشوكاني في تحفة الذاكرين ينتهي بطلوع الشمس وهذا ظاهر كلام شيخ الإسلام في الكلم الطيب كما في شرحه للعيني وبه صرح ابن القيم في الوابل الصيب، :فيه تفصيل: يبدأ الوقت المختار من طلوع الفجر إلى طلوع الشمس، وما بقى وقتها فحكم الصباح منسحب عليه. قال ابن حجر: الظاهر انه لو قال أثناء النهار لا تحصل تلك الفائدة، لكن عظيم بركة الذكر يقتضي الحصول. آية الكرسي: أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ (اللّهُ لاَ إِلَهَ إِلاَّ هُوَ الْحَيُّ الْقَيُّومُ لاَ تَأْخُذُهُ سِنَةٌ وَلاَ نَوْمٌ لَّهُ مَا فِي السَّمَاوَاتِ وَمَا فِي الأَرْضِ مَن ذَا الَّذِي يَشْفَعُ عِنْدَهُ إِلاَّ بِإِذْنِهِ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ وَلاَ يُحِيطُونَ بِشَيْءٍ مِّنْ عِلْمِهِ إِلاَّ بِمَا شَاء وَسِعَ كُرْسِيُّهُ السَّمَاوَاتِ وَالأَرْضَ وَلاَ يَؤُودُهُ حِفْظُهُمَا وَهُوَ الْعَلِيُّ الْعَظِيمُ). (البقرة 255) (مرة واحدة)، من قالها حين يصبح أجير من الجن حتى يمسى ومن قالها حين يمسى أجير من الجن حتى يصبح . أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ، بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم (قُلْ هُوَ اللَّهُ أَحَدٌ، اللَّهُ الصَّمَدُ، لَمْ يَلِدْ وَلَمْ يُولَدْ، وَلَمْ يَكُن لَّهُ كُفُوًا أَحَدٌ). أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ، بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم (قُلْ أَعُوذُ بِرَبِّ الْفَلَقِ، مِن شَرِّ مَا خَلَقَ، وَمِن شَرِّ غَاسِقٍ إِذَا وَقَبَ، وَمِن شَرِّ النَّفَّاثَاتِ فِي الْعُقَدِ، وَمِن شَرِّ حَاسِدٍ إِذَا حَسَدَ). أَعُوذُ بِاللهِ مِنْ الشَّيْطَانِ الرَّجِيمِ، بِسْمِ اللهِ الرَّحْمنِ الرَّحِيم (قُلْ أَعُوذُ بِرَبِّ النَّاسِ، مَلِكِ النَّاسِ، إِلَهِ النَّاسِ، مِن شَرِّ الْوَسْوَاسِ الْخَنَّاسِ، الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ، مِنَ الْجِنَّةِ وَ النَّاسِ)، من قالها حين يصبح وحين يمسى كفته من كل شيء (ثلاث مرات). أَصْبَحْنا وَأَصْبَحَ المُلْكُ لله وَالحَمدُ لله، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُلكُ ولهُ الحَمْد، وهُوَ على كلّ شَيءٍ قدير، رَبِّ أسْأَلُكَ خَيرَ ما في هذا اليوم وَخَيرَ ما بَعْدَه، وَأَعوذُ بِكَ مِنْ شَرِّ ما في هذا اليوم وَشَرِّ ما بَعْدَه، رَبِّ أَعوذُ بِكَ مِنَ الْكَسَلِ وَسوءِ الْكِبَر، رَبِّ أَعوذُ بِكَ مِنْ عَذابٍ في النّارِ وَعَذابٍ في القَبْر. (مرة واحدة) اللّهمَّ أَنْتَ رَبِّي لا إلهَ إلاّ أَنْتَ، خَلَقْتَني وَأَنا عَبْدُك، وَأَنا عَلى عَهْدِكَ وَوَعْدِكَ ما اسْتَطَعْت، أَعوذُ بِكَ مِنْ شَرِّ ما صَنَعْت، أَبوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ وَأَبوءُ بِذَنْبي فَاغْفِرْ لي فَإِنَّهُ لا يَغْفِرُ الذُّنوبَ إِلاّ أَنْتَ. (مرة واحدة)، من قالها موقنا بها حين يمسى ومات من ليلته دخل الجنة وكذلك حين يصبح) رَضيتُ بِاللهِ رَبَّاً وَبِالإسْلامِ ديناً وَبِمُحَمَّدٍ صلى الله عليه وسلم نَبِيّاً. (ثلاث مرات)، من قالها حين يصبح وحين يمسى كان حقا على الله أن يرضيه يوم القيامة. اللّهُمَّ إِنِّي أَصْبَحْتُ أُشْهِدُك، وَأُشْهِدُ حَمَلَةَ عَرْشِك، وَمَلائِكَتِك، وَجَميعَ خَلْقِك، أَنَّكَ أَنْتَ اللهُ لا إلهَ إلاّ أَنْتَ وَحْدَكَ لا شَريكَ لَك، وَأَنَّ ُ مُحَمّداً عَبْدُكَ وَرَسولُك (من قالها أعتقه الله من النار) (أربع مرات). اللّهُمَّ ما أَصْبََحَ بي مِنْ نِعْمَةٍ أَو بِأَحَدٍ مِنْ خَلْقِك، فَمِنْكَ وَحْدَكَ لا شريكَ لَك، فَلَكَ الْحَمْدُ وَلَكَ الشُّكْر. (من قالها حين يصبح أدى شكر يومه) (مرة واحدة). حَسْبِيَ اللّهُ لا إلهَ إلاّ هُوَ عَلَيهِ تَوَكَّلتُ وَهُوَ رَبُّ العَرْشِ العَظيم. (من قالها كفاه الله ما أهمه من أمر الدنيا والأخرة) (سبع مرات) بِسمِ اللهِ الذي لا يَضُرُّ مَعَ اسمِهِ شَيءٌ في الأرْضِ وَلا في السّماءِ وَهوَ السّميعُ العَليم. (ثلاث مرات) اللّهُمَّ بِكَ أَصْبَحْنا وَبِكَ أَمْسَينا، وَبِكَ نَحْيا وَبِكَ نَمُوتُ وَإِلَيْكَ النُّشُور.(مرة واحدة) أَصْبَحْنا عَلَى فِطْرَةِ الإسْلاَمِ، وَعَلَى كَلِمَةِ الإِخْلاَصِ، وَعَلَى دِينِ نَبِيِّنَا مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ، وَعَلَى مِلَّةِ أَبِينَا إبْرَاهِيمَ حَنِيفاً مُسْلِماً وَمَا كَانَ مِنَ المُشْرِكِينَ. (مرة واحدة). سُبْحانَ اللهِ وَبِحَمْدِهِ عَدَدَ خَلْقِه، وَرِضا نَفْسِه، وَزِنَةَ عَرْشِه، وَمِدادَ كَلِماتِه. (ثلاث مرات) اللّهُمَّ عافِني في بَدَني، اللّهُمَّ عافِني في سَمْعي، اللّهُمَّ عافِني في بَصَري، لا إلهَ إلاّ أَنْتَ. (ثلاث مرات) اللّهُمَّ إِنّي أَعوذُ بِكَ مِنَ الْكُفر، وَالفَقْر، وَأَعوذُ بِكَ مِنْ عَذابِ القَبْر، لا إلهَ إلاّ أَنْتَ. (ثلاث مرات) اللّهُمَّ إِنِّي أسْأَلُكَ العَفْوَ وَالعافِيةَ في الدُّنْيا وَالآخِرَة، اللّهُمَّ إِنِّي أسْأَلُكَ العَفْوَ وَالعافِيةَ في ديني وَدُنْيايَ وَأهْلي وَمالي، اللّهُمَّ اسْتُرْ عوْراتي وَآمِنْ رَوْعاتي، اللّهُمَّ احْفَظْني مِن بَينِ يَدَيَّ وَمِن خَلْفي وَعَن يَميني وَعَن شِمالي، وَمِن فَوْقي، وَأَعوذُ بِعَظَمَتِكَ أَن أُغْتالَ مِن تَحْتي.(مرة واحدة) يا حَيُّ يا قَيّومُ بِرَحْمَتِكِ أَسْتَغيث، أَصْلِحْ لي شَأْني كُلَّه، وَلا تَكِلني إِلى نَفْسي طَرْفَةَ عَين.(ثلاث مرات) أَصْبَحْنا وَأَصْبَحْ المُلكُ للهِ رَبِّ العالَمين، اللّهُمَّ إِنِّي أسْأَلُكَ خَيْرَ هذا اليَوْم، فَتْحَهُ، وَنَصْرَهُ، وَنورَهُ وَبَرَكَتَهُ، وَهُداهُ، وَأَعوذُ بِكَ مِنْ شَرِّ ما فيهِ وَشَرِّ ما بَعْدَه.(مرة واحدة). اللّهُمَّ عالِمَ الغَيْبِ وَالشّهادَةِ فاطِرَ السّماواتِ وَالأرْضِ رَبَّ كلِّ شَيءٍ وَمَليكَه، أَشْهَدُ أَنْ لا إِلهَ إِلاّ أَنْت، أَعوذُ بِكَ مِن شَرِّ نَفْسي وَمِن شَرِّ الشَّيْطانِ وَشِرْكِه، وَأَنْ أَقْتَرِفَ عَلى نَفْسي سوءاً أَوْ أَجُرَّهُ إِلى مُسْلِم. (مرة واحدة) أَعوذُ بِكَلِماتِ اللّهِ التّامّاتِ مِنْ شَرِّ ما خَلَق. (ثلاث مرات) اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد. (من صلى على حين يصبح وحين يمسى ادركته شفاعتى يوم القيامة) (عشر مرات) اللَّهُمَّ إِنَّا نَعُوذُ بِكَ مِنْ أَنْ نُشْرِكَ بِكَ شَيْئًا نَعْلَمُهُ، وَنَسْتَغْفِرُكَ لِمَا لَا نَعْلَمُهُ. (ثلاث مرات) اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ الْهَمِّ وَالْحَزَنِ، وَأَعُوذُ بِكَ مِنْ الْعَجْزِ وَالْكَسَلِ، وَأَعُوذُ بِكَ مِنْ الْجُبْنِ وَالْبُخْلِ، وَأَعُوذُ بِكَ مِنْ غَلَبَةِ الدَّيْنِ، وَقَهْرِ الرِّجَالِ. (ثلاث مرات) أسْتَغْفِرُ اللهَ العَظِيمَ الَّذِي لاَ إلَهَ إلاَّ هُوَ، الحَيُّ القَيُّومُ، وَأتُوبُ إلَيهِ. (ثلاث مرات) يَا رَبِّ، لَكَ الْحَمْدُ كَمَا يَنْبَغِي لِجَلَالِ وَجْهِكَ، وَلِعَظِيمِ سُلْطَانِكَ. (ثلاث مرات) لا إلَه إلّا اللهُ وَحَدُّهُ لَا شَرِيكَ لَهُ، لَهُ الْمَلِكَ وَلَهُ الْحَمْدُ وَهُوَ عَلَى كُلُّ شَيْءِ قَدِيرِ. (عشر مرات) اللَّهُمَّ أَنْتَ رَبِّي لا إِلَهَ إِلا أَنْتَ، عَلَيْكَ تَوَكَّلْتُ، وَأَنْتَ رَبُّ الْعَرْشِ الْكَرِيمِ، مَا شَاءَ اللَّهُ كَانَ، وَمَا لَمْ يَشَأْ لَمْ يَكُنْ، وَلا حَوْلَ وَلا قُوَّةَ إِلا بِاللَّهِ الْعَلِيِّ الْعَظِيمِ، أَعْلَمُ أَنَّ اللَّهَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ، وَأَنَّ اللَّهَ قَدْ أَحَاطَ بِكُلِّ شَيْءٍ عِلْمًا، اللَّهُمَّ إِنِّي أَعُوذُ بِكَ مِنْ شَرِّ نَفْسِي، وَمِنْ شَرِّ كُلِّ دَابَّةٍ أَنْتَ آخِذٌ بِنَاصِيَتِهَا، إِنَّ رَبِّي عَلَى صِرَاطٍ مُسْتَقِيمٍ. (من قالها أول النهار لم تصبه مصيبة حتى يمسي ومن قالها آخر النهار لم تصبه مصيبة حتى يصبح) (مرة واحدة). اللهم إنّي أصبحت أثني عليك حَمداً وأشهد أن لا إله إلا الله. (ثلاثا ًحين يصبح) اللّهمَّ أَنْتَ رَبِّي لا إلهَ إلاّ أَنْتَ، خَلَقْتَني وَأَنا عَبْدُك، وَأَنا عَلى عَهْدِكَ وَوَعْدِكَ ما اسْتَطَعْت، أَعوذُبِكَ مِنْ شَرِّ ما صَنَعْت، أَبوءُ لَكَ بِنِعْمَتِكَ عَلَيَّ وَأَبوءُ بِذَنْبي فَإغْفِرْ لي فَإِنَّهُ لا يَغْفِرُ الذُّنوبَ إِلاّ أَنْتَ. (من قالها موقناً بها حين يمسي ومات من ليلته دخل الجنة وكذلك حين يصبح) اللهم إني أسألك علماً نافعاً، ورزقاً طيباً، وعملاً متقبلاً (إذا أصبح).

</string>
    <string name="stop">stop sound</string>
    <string name="noti">show notificaion</string>
</resources>