<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/hadi"
    tools:context="com.example.yasmeen.azkar.MainActivity">

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_animations"
    android:layout_marginTop="20px"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    android:text="@string/azSpah"
    android:textSize="@dimen/textSize_button_main"
    android:textColor="#dbdbdb"
    android:id="@+id/mor"
    android:onClick="mor"
    />
    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_animations"
    android:layout_marginTop="50px"
    android:text="@string/azMsa"
    android:textSize="@dimen/textSize_button_main"
    android:textColor="#dbdbdb"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    android:id="@+id/even"
    android:onClick="even"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:text="@string/aznom"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:id="@+id/sleep"
        android:onClick="sleep"
        />
    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_animations"
    android:layout_marginTop="50px"
    android:text="@string/azhouse"
    android:textSize="@dimen/textSize_button_main"
    android:textColor="#dbdbdb"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
        android:id="@+id/house"
        android:onClick="house"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/azfood"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/food"
        android:onClick="food"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/azmosq"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/mosq"
        android:onClick="mosq"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/azfinishpray"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/pray"
        android:onClick="pray"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/azazan"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/azan"
        android:onClick="azan"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/stop"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/send"
        android:onClick="send"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_animations"
        android:layout_marginTop="50px"
        android:text="@string/noti"
        android:textSize="@dimen/textSize_button_main"
        android:textColor="#dbdbdb"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:id="@+id/noty"
        android:onClick="noty"
        />
</LinearLayout>
</ScrollView>